Fix Maven group

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0
-	maven_group = io.github.elysian_mods
+	maven_group = io.github.kg583
 	archives_base_name = classic_adventure
 
 # Dependencies
