--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.0
+	mod_version = 1.0-1.20.1
 	maven_group = io.github.kg583
 	archives_base_name = classic_adventure
 
